Switch back to original SVG logo
- Replaced tech-logo.png with original logo.svg
- Maintained all prominent styling and hover effects
- Updated Dockerfile to include SVG logo
- Kept same size and glow effects for consistency

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="#home" class="logo-link">
-                    <img src="tech-logo.png" alt="xyra.ai Tech Logo" class="logo-img">
+                    <img src="logo.svg" alt="xyra.ai Logo" class="logo-img">
                 </a>
             </div>
             <ul class="nav-menu">
@@ -226,7 +226,7 @@
                 <div class="footer-section">
                     <div class="footer-logo">
                         <a href="#home" class="logo-link">
-                            <img src="tech-logo.png" alt="xyra.ai Tech Logo" class="logo-img">
+                            <img src="logo.svg" alt="xyra.ai Logo" class="logo-img">
                         </a>
                     </div>
                     <p>Empowering businesses with intelligent automation solutions.</p>
