Replace image logo with text-based logo to eliminate white background
- Created custom text logo: 'xyra.ai' with blue and green colors
- Navigation: 1.8rem font size with glow effects
- Footer: 1.5rem font size with glow effects
- No more white background issues
- Maintains all hover effects and styling
- Professional typography-based branding

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="#home" class="logo-link">
-                    <img src="tech-logo.png" alt="xyra.ai Logo" class="logo-img">
+                    <div class="logo-text">
+                        <span class="logo-xyra">xyra</span>
+                        <span class="logo-ai">.ai</span>
+                    </div>
                 </a>
             </div>
             <ul class="nav-menu">
@@ -226,7 +229,10 @@
                 <div class="footer-section">
                     <div class="footer-logo">
                         <a href="#home" class="logo-link">
-                            <img src="tech-logo.png" alt="xyra.ai Logo" class="logo-img">
+                            <div class="logo-text">
+                                <span class="logo-xyra">xyra</span>
+                                <span class="logo-ai">.ai</span>
+                            </div>
                         </a>
                     </div>
                     <p>Empowering businesses with intelligent automation solutions.</p>
