Create professional CSS logo with animated icon
- Added circular gradient icon with pulsing dots animation
- Professional typography with proper spacing
- Blue and green color scheme matching brand
- Animated elements for modern tech feel
- No white background issues
- Scalable and responsive design
- Much more professional than plain text

--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="#home" class="logo-link">
-                    <div class="logo-text">
-                        <span class="logo-xyra">xyra</span>
-                        <span class="logo-ai">.ai</span>
+                    <div class="logo-container">
+                        <div class="logo-icon">
+                            <div class="logo-circle"></div>
+                            <div class="logo-dots">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </div>
+                        </div>
+                        <div class="logo-text">
+                            <span class="logo-xyra">xyra</span>
+                            <span class="logo-ai">.ai</span>
+                        </div>
                     </div>
                 </a>
             </div>
@@ -229,9 +239,19 @@
                 <div class="footer-section">
                     <div class="footer-logo">
                         <a href="#home" class="logo-link">
-                            <div class="logo-text">
-                                <span class="logo-xyra">xyra</span>
-                                <span class="logo-ai">.ai</span>
+                            <div class="logo-container">
+                                <div class="logo-icon">
+                                    <div class="logo-circle"></div>
+                                    <div class="logo-dots">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </div>
+                                <div class="logo-text">
+                                    <span class="logo-xyra">xyra</span>
+                                    <span class="logo-ai">.ai</span>
+                                </div>
                             </div>
                         </a>
                     </div>
